2012-12-04  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (new_schedule): Default First Time fields to current
	time.

2012-12-04  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (next_page): Add handlers for get_report_format and
	get_report_formats.
	(check_modify_report_format): Remove unused function.
	(save_report_format_omp): Refactor to leverage omp, next_page and
	omp_success functions.

2012-12-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-target-form): Add missing filt_id arg to
	header icons and remove old max and first args.
	(html-edit-note-form, html-edit-override-form): Add list icon in header.

2012-12-03  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad.c (delete_agent_omp, delete_trash_agent_omp)
	(delete_trash_report_format_omp, delete_trash_slave_omp)
	(delete_report_format_omp, edit_report_format): Code refactoring to
	leverage delete_resource and edit_resource.

2012-12-03  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad.c (init_validator, exec_omp_get): Added new_report_format
	command.

	* src/gsad_omp.c, src/gsad_omp.h (get_report_format)
	(get_report_format_omp, get_report_formats, get_report_formats_omp):
	Refactored to leverage get_one and get_many functions.
	(new_report_format, new_report_format_omp): New functions.
	(save_report_format_omp): Adapt for get_report_format and
	get_report_formats.

2012-12-03  Hani Benhabiles <kroosec@gmail.com>

	Update Report formats management.

	* src/html/omp.xsl (html-report-formats-table): Use list-window.
	(html-import-report-format-form): Renamed to
	html-create-report-format-form.
	(html-import-report-format-form, html-edit-report-format-form): Updated
	title and links to follow the new style.
	(report_format [details]): Use details-header-icons and minor-details.
	Update various links.
	(new_report_format): New template.
	(get_report_formats): Update to match new style.

2012-11-29  Hani Benhabiles <kroosec@gmail.com>
