@@ -1,3 +1,8 @@
+2012-12-05  Hani Benhabiles <kroosec@gmail.com>
+
+	* src/gsad_omp.c (new_note): Revert previous change to take into
+	account task_id and result_id values.
+
 2012-12-04  Hani Benhabiles <kroosec@gmail.com>
 
 	* src/gsad_omp.c (new_schedule): Default First Time fields to current
